	* Allow plain space as 1000s separator in FR locale.
	* Fix graph size problem affecting image output.  [#507]
	* Check for yelp in autogen.  [#558]
	* Fix ssconvert problem with conditional styles.
	* Move from style regions to style classes in css.
	* Implement #ifdef for built-in css.
	* Dead kitten in css.
	* Improve the drawing of filter combos.
	* Allow theming of grid color.

--------------------------------------------------------------------------
Gnumeric 1.12.48

Andreas:
	* Add axis title to chart in histogram tool. [#408]
	* Fix line end marker roundtrip through strict ODF
	* Improve export of line markers to ODF for interoperability
	* Improve line marker handling on import
	* Fix LaTeX export. [#489]
	* When reading an ODF file make all sheets of equal size. [#505]

Jean:
	* Fix xlsx object non-import crash.
	* Fix in-place graph data problem.  [#492]
	* Port to Python3. [#419]

Morten:
	* Fix performance issue with sample_datasource.  [#491]
	* Fix partial-line issue with sample_datasource.
	* Fix load of in-place graph data with extra ()s.  [#492]
	* Fix Ctrl-; cursor position.  [#494]
	* Fix ssconvert --merge-to problem.  [#496]
	* Fix sheet size paste problem.  [#497]
	* Speed up really large auto-filters.  [#465]
	* Fix 2038 problem on quit.
	* Improve tests.
	* Improve dependency tracking for implicit intersection. [#501]
	* Fix format dialog issue.  [#503]
	* Re-tune style quad tree.  [#234]
	* Re-tune dependency bucket system.  [#502]
	* Fix global name parsing problem with non-uniform sheet sizing.
	* Avoid style dependency redraw during file load.
	* Tend to dead kittens.
	* Fix metadata dialog.  [#510]
	* Fix potential 64-bit problem with signals.
	* Fix GnmRange introspection.

--------------------------------------------------------------------------
Gnumeric 1.12.47

Andreas:
	* Fix chart and image name roundtrip through ODF. [#477]
	* Fix print flag roundtrip for sheet objects through ODF. [#486]

Jean: