@@ -35,6 +35,7 @@ Morten:
 	* Dead kitten in css.
 	* Improve the drawing of filter combos.
 	* Allow theming of grid color.
+	* Fix dirty-tracking.  [#554]
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.48
